--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Spa_27</title>
+    <style>
+        @import url("style/styles.css");
+    </style>
 </head>
 <body>
 <header>
@@ -17,23 +20,23 @@
     </ul>
 </nav>
 
-<section>
-    <div>
-     <b>Enter to application</b>
-     <br>
-         <input type="text" required name="login" placeholder="login" alt="login field">
-         <br>
-         <input type="password" required name="password" placeholder="password" alt="password field">
-         <br>
-         <button>Login</button>
-    </div>
-
+<section class="logger">
+     <h3>Enter to application</h3>
+        <div>
+        <input type="text" required name="login" placeholder="login" alt="login field">
+            <div>
+        <input type="password" required name="password" placeholder="password" alt="password field">
+                <div>
+        <button>Login</button>
+                </div>
+            </div>
+        </div>
 </section>
 
 
 
 <footer>
-    <em>©All right reserved by project_27</em>
+        <em>©All right reserved by project_27</em>
 </footer>
 
 </body>
