Added sticky footer

--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
         @import url("style/styles.css");
     </style>
 </head>
+
 <body>
-<header>
+<section>
+<div class="wrapper">
+
+<header class="page-header">
     <div>
         <h1>Single Page Application</h1>
     </div>
 </header>
+
+<main class="page-body">
 <nav>
     <ul>
         <li><a href="./index.html">Home</a></li>
@@ -20,7 +26,7 @@
     </ul>
 </nav>
 
-<section class="logger">
+<div class="logger">
      <h3>Enter to application</h3>
         <div>
         <input type="text" required name="login" placeholder="login" alt="login field">
@@ -31,13 +37,12 @@
                 </div>
             </div>
         </div>
-</section>
-
-
-
-<footer>
+</div>
+</main>
+<footer class="page-footer">
         <em>©All right reserved by project_27</em>
 </footer>
-
+  </div>
+</section>
 </body>
 </html>
