Added sticky footer

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Spa_27</title>
-    <style>
+    <link href="style/styles.css" type="text/css" rel="stylesheet">
+    <!--<style>
         @import url("style/styles.css");
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -13,9 +14,7 @@
 <div class="wrapper">
 
 <header class="page-header">
-    <div>
-        <h1>Single Page Application</h1>
-    </div>
+    <h1>Single Page Application</h1>
 </header>
 
 <main class="page-body">
