1.installed framework express 2.added app.js with basic configuration

--- a/client/src/pages/about.html
+++ b/client/src/pages/about.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <a href="./index.html">Back to main page</a>
+    <a href="index.html">Back to main page</a>
 </header>
 
 <section>
