--- a/client/src/pages/index.html
+++ b/client/src/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Spa_27</title>
-    <link href="style/styles.css" type="text/css" rel="stylesheet">
+    <link href="../style/styles.css" type="text/css" rel="stylesheet">
     <!--<style>
         @import url("style/styles.css");
     </style> -->
@@ -21,7 +21,7 @@
 <nav>
     <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
 </nav>
 
@@ -37,6 +37,8 @@
             </div>
         </div>
 </div>
+    <div id="root">
+    </div>
 </main>
 <footer class="page-footer">
         <em>©All right reserved by project_27</em>
