begin make components on React

--- a/client/_samples/index.html
+++ b/client/_samples/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Spa_27</title>
-    <link href="../style/styles.css" type="text/css" rel="stylesheet">
+    <link href="../src/style/styles.css" type="text/css" rel="stylesheet">
     <!--<style>
         @import url("style/styles.css");
     </style> -->
